--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,34 +1,60 @@
-<h2>Sign up</h2>
+<div class="container">
+  <div class="row no-gutters">
+    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto text-center shadow-lg rounded px-0 my-5">
+      <h2>新規会員登録</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
+      <%= form_with model: @customer, url: customer_registration_path, id: 'new_costomer', class: 'new_costomer' do |f| %>
+        <%= render "public/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+        <div class="field">
+          <%= f.label :name, "名前" %>
+          <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
+          <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :name_kana, "フリガナ" %>
+          <%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana" %>
+          <%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :email, "メールアドレス" %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :postal_code, "郵便番号(ハイフンなし)" %>
+          <%= f.email_field :postal_code, autofocus: true, autocomplete: "postal_code" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :address, "住所" %>
+          <%= f.email_field :address, autofocus: true, autocomplete: "address" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :telephone_number, "電話番号(ハイフンなし)" %>
+          <%= f.email_field :telephone_number, autofocus: true, autocomplete: "telephone_number" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :password, "パスワード(６文字以上)" %>
+          <%= f.password_field :password, autocomplete: "new-password" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :password_confirmation, "パスワード(確認用)" %>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+        </div>
+
+        <div class="actions">
+          <%= f.submit "新規登録", class: "btn btn-sm btn-success" %>
+        </div>
+      <% end %>
+
+      <h2>既に登録済みの方</h2>
+      <%= link_to "こちら", new_customer_session_path %>  からログインしてください。
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "public/shared/links" %>
+</div>
