--- a/app/views/layouts/_customer_header.html.erb
+++ b/app/views/layouts/_customer_header.html.erb
@@ -15,7 +15,7 @@
   <% end %>
 </li>
 <li>
-  <%= link_to destroy_customer_session_path, method: :delete, class: 'nav-link text-light' do %>
+  <%= link_to destroy_customer_session_path, class: 'nav-link text-light' do %>
   <i style="color:#fff;"></i> ログアウト
   <% end %>
 </li>
