--- a/app/views/layouts/_customer_header.html.erb
+++ b/app/views/layouts/_customer_header.html.erb
@@ -1,6 +1,6 @@
 <% if customer_signed_in? %>
 <li>
-  <%= link_to root_path, class: 'nav-link text-light' do %>
+  <%= link_to customers_my_page_path, class: 'nav-link text-light' do %>
   <i class="fas fa-home" style="color:#fff;"></i> マイページ
   <% end %>
 </li>
@@ -21,7 +21,7 @@
 </li>
 <% else %>
 <li>
-  <%= link_to root_path, class: 'nav-link text-light' do %>
+  <%= link_to about_path, class: 'nav-link text-light' do %>
   <i style="color:#fff;"></i> About
   <% end %>
 </li>
@@ -32,12 +32,12 @@
 </li>
 <li>
   <%= link_to new_customer_registration_path, class: 'nav-link text-light' do %>
-  <i class="fas fa-user-plus"  style="color:#fff;"></i> Sign up
+  <i class="fas fa-user-plus"  style="color:#fff;"></i> 新規登録
   <% end %>
 </li>
 <li>
   <%= link_to new_customer_session_path, class: 'nav-link text-light' do %>
-  <i class="fas fa-sign-in-alt" style="color:#fff;"></i> Log in
+  <i class="fas fa-sign-in-alt" style="color:#fff;"></i> ログイン
   <% end %>
 </li>
 <% end %>
