--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -1,24 +1,24 @@
 <% if admin_signed_in? %>
-<li>
+<li class="nav-item">
   <%= link_to root_path, class: 'nav-link text-light' do %>
   <i class="fas fa-home" style="color:#fff;"></i> 商品一覧
   <% end %>
 </li>
-<li>
+<li class="nav-item">
   <%= link_to root_path, class: 'nav-link text-light' do %>
   <i class="fas fa-users" style="color:#fff;"></i> 会員一覧
   <% end %>
 </li>
-<li>
+<li class="nav-item">
   <%= link_to  root_path, class: 'nav-link text-light' do %>
   <i class="fas fa-book-open" style="color:#fff;"></i> 注文履歴一覧
   <% end %>
 </li>
-<li>
+<li class="nav-item">
   <%= link_to destroy_admin_session_path, data: { turbo_method: :delete } do %>
   <i style="color:#fff;"></i> ログアウト
   <% end %>
-</li>
+</li class="nav-item">
 <% else %>
  <%= render '/layouts/customer_header' %>
 <% end %>
