--- a/app/views/layouts/_customer_header.html.erb
+++ b/app/views/layouts/_customer_header.html.erb
@@ -1,41 +1,41 @@
 <% if customer_signed_in? %>
-<li>
+<li class="nav-item">
   <%= link_to customers_my_page_path, class: 'nav-link text-light' do %>
   <i class="fas fa-home" style="color:#fff;"></i> マイページ
   <% end %>
 </li>
-<li>
+<li class="nav-item">
   <%= link_to root_path, class: 'nav-link text-light' do %>
   <i class="fas fa-users" style="color:#fff;"></i> 商品一覧
   <% end %>
 </li>
-<li>
+<li class="nav-item">
   <%= link_to  root_path, class: 'nav-link text-light' do %>
   <i class="fas fa-book-open" style="color:#fff;"></i> カート
   <% end %>
 </li>
-<li>
+<li class="nav-item">
   <%= link_to destroy_customer_session_path, class: 'nav-link text-light' do %>
   <i style="color:#fff;"></i> ログアウト
   <% end %>
 </li>
 <% else %>
-<li>
+<li class="nav-item">
   <%= link_to about_path, class: 'nav-link text-light' do %>
   <i style="color:#fff;"></i> About
   <% end %>
 </li>
-<li>
+<li class="nav-item">
   <%= link_to root_path, class: 'nav-link text-light' do %>
   <i style="color:#fff;"></i> 商品一覧
   <% end %>
 </li>
-<li>
+<li class="nav-item">
   <%= link_to new_customer_registration_path, class: 'nav-link text-light' do %>
   <i class="fas fa-user-plus"  style="color:#fff;"></i> 新規登録
   <% end %>
 </li>
-<li>
+<li class="nav-item">
   <%= link_to new_customer_session_path, class: 'nav-link text-light' do %>
   <i class="fas fa-sign-in-alt" style="color:#fff;"></i> ログイン
   <% end %>
