--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,14 +1,18 @@
 <div class="container">
   <div class="row no-gutters">
-    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto text-center shadow-lg rounded px-0 my-5">
-      <h2>新規会員登録</h2>
+    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto shadow-lg rounded px-0 my-5">
+      <h2 class="mb-4 bg-shadow">新規会員登録</h2>
 
       <%= form_with model: @customer, url: customer_registration_path, id: 'new_costomer', class: 'new_costomer' do |f| %>
         <%= render "public/shared/error_messages", resource: resource %>
 
         <div class="field">
-          <%= f.label :name, "名前" %>
+          <%= f.label :name, "(名前)" %>
+
+          <%= f.label :last_name, "(姓)" %>
           <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
+
+          <%= f.label :first_name, "(名)" %>
           <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %>
         </div>
 
