[Add] public withdraw

--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -32,5 +32,7 @@
           </tr>
         </body>
       </table>
+
+    <h4>注文履歴</h4><%= link_to "一覧を見る", '/orders', class: "btn btn-primary mb-4" %>
   </div>
 </div>
