--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -3,11 +3,11 @@
     <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto text-center shadow-lg rounded px-0 my-5">
       <h2>会員情報編集</h2>
 
-      <%= form_with model: @customer, url: customer_registration_path, id: 'new_costomer', class: 'new_costomer' do |f| %>
+      <%= form_with model: @customer, url: customer_registration_path, id: 'new_customer', class: 'new_customer' do |f| %>
         <%= render "public/shared/error_messages", resource: resource %>
 
         <div class="field">
-          <%= f.label :name, "名前" %>
+          <%= f.label :name, "氏名" %>
           <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
           <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %>
         </div>
@@ -19,12 +19,7 @@
         </div>
 
         <div class="field">
-          <%= f.label :email, "メールアドレス" %>
-          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-        </div>
-
-        <div class="field">
-          <%= f.label :postal_code, "郵便番号(ハイフンなし)" %>
+          <%= f.label :postal_code, "郵便番号" %>
           <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code" %>
         </div>
 
@@ -34,22 +29,18 @@
         </div>
 
         <div class="field">
-          <%= f.label :telephone_number, "電話番号(ハイフンなし)" %>
+          <%= f.label :telephone_number, "電話番号" %>
           <%= f.telephone_field :telephone_number, autofocus: true, autocomplete: "telephone_number" %>
         </div>
 
         <div class="field">
-          <%= f.label :password, "パスワード(６文字以上)" %>
-          <%= f.password_field :password, autocomplete: "new-password" %>
+          <%= f.label :email, "メールアドレス" %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
         </div>
 
-        <div class="field">
-          <%= f.label :password_confirmation, "パスワード(確認用)" %>
-          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-        </div>
 
         <div class="actions">
-          <%= f.submit "編集内容を", class: "btn btn-sm btn-success" %>
+          <%= f.submit "編集内容を保存", class: "btn btn-sm btn-success" %>
         </div>
       <% end %>
 
