--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -1,16 +1,16 @@
 <% if admin_signed_in? %>
 <li class="nav-item">
-  <%= link_to root_path, class: 'nav-link text-light' do %>
+  <%= link_to admin_items_path, class: 'nav-link text-light' do %>
   <i class="fas fa-home" style="color:#fff;"></i> 商品一覧
   <% end %>
 </li>
 <li class="nav-item">
-  <%= link_to root_path, class: 'nav-link text-light' do %>
+  <%= link_to admin_customers_path, class: 'nav-link text-light' do %>
   <i class="fas fa-users" style="color:#fff;"></i> 会員一覧
   <% end %>
 </li>
 <li class="nav-item">
-  <%= link_to  root_path, class: 'nav-link text-light' do %>
+  <%= link_to  admin_root_path, class: 'nav-link text-light' do %>
   <i class="fas fa-book-open" style="color:#fff;"></i> 注文履歴一覧
   <% end %>
 </li>
@@ -20,5 +20,24 @@
   <% end %>
 </li class="nav-item">
 <% else %>
- <%= render '/layouts/customer_header' %>
+ <li class="nav-item">
+  <%= link_to about_path, class: 'nav-link text-light' do %>
+  <i style="color:#fff;"></i> About
+  <% end %>
+</li>
+<li class="nav-item">
+  <%= link_to root_path, class: 'nav-link text-light' do %>
+  <i style="color:#fff;"></i> 商品一覧
+  <% end %>
+</li>
+<li class="nav-item">
+  <%= link_to new_customer_registration_path, class: 'nav-link text-light' do %>
+  <i class="fas fa-user-plus"  style="color:#fff;"></i> 新規登録
+  <% end %>
+</li>
+<li class="nav-item">
+  <%= link_to new_admin_session_path, class: 'nav-link text-light' do %>
+  <i class="fas fa-sign-in-alt" style="color:#fff;"></i> ログイン
+  <% end %>
+</li>
 <% end %>
