--- a/app/views/public/customers/confirm.html.erb
+++ b/app/views/public/customers/confirm.html.erb
@@ -6,5 +6,5 @@
    退会する場合は、「退会する」をクリックしてください。
  </p>
 
-<%= link_to "退会しない", customer_my_page_path %>
-<%= link_to "退会する", withdraw_path, method: :patch, data: { confilm: "本当に退会しますか？" } %>
+<%= link_to "退会しない", customers_my_page_path, class: "btn btn-sm btn-primary" %>
+<%= link_to "退会する", customers_withdraw_path, method: :patch, data: { confilm: "本当に退会しますか？" }, class: "btn btn-sm btn-danger" %>
