--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row no-gutters">
-    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto text-center shadow-lg rounded px-0 my-5">
+  <div class="row">
+    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto shadow-lg rounded px-0 my-5">
       <h2>会員情報編集</h2>
 
       <%= form_with model: @customer, url: customer_registration_path, id: 'new_customer', class: 'new_customer' do |f| %>
@@ -40,7 +40,8 @@
 
 
         <div class="actions">
-          <%= f.submit "編集内容を保存", class: "btn btn-sm btn-success" %>
+          <%= f.submit "編集内容を保存", class: "btn btn-sm btn-success col-sm-3" %>
+          <%= link_to " 退会する", customers_confirm_path, class: "btn btn-danger col-sm-3" %>
         </div>
       <% end %>
 
