--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,11 +1,14 @@
 <div>
   <h5>商品詳細</h5>
-  <% if item.image.attached? %>
+  <% if @item.image.attached? %>
     <%= image_tag item.image, size: "200x200" %>
   <% else %>
     <%= image_tag 'no_image', size: "200x200" %>
-  <p>商品名名 : <%= @item.name %></p>
-  <p>商品説明 : <%= @item.introduction %></p>
-  <p>税込価格（税抜価格） : <%= @item.price %></p>
-  <%= link_to "編集する", edit_admins_item_path(@item), class: "btn btn-primary" %>
+  <% end %>
+  <p>商品名  <%= @item.name %></p>
+  <p>商品説明  <%= @item.introduction %></p>
+  <p>税込価格</br>
+    (税抜価格)  <%= @item.price*1.1 %>円 (<%= @item.price %>円)
+  </p>
+  <%= link_to "編集する", edit_admin_item_path(@item), class: "btn btn-success" %>
 </div>
