--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -2,6 +2,23 @@
   <div class="row">
     <div>
       <h3>商品一覧</h3>
+        <div class="col-xs-9 col-xs-offset-1">
+
+        <div class="col-xs-9 col-xs-offset-1">
+            <div class="item--card-content">
+                <% @items.each do |item| %>
+                    <div class="col-xs-3" style="padding-right: 0px; padding-left: 0px;">
+                        <%= link_to item_path(item.id) ,style: "color: black;", data: {"turbolinks" => false} do %>
+                          <%= image_tag item.get_image, size: "160x160" %><br>
+                          <%= item.name %><br>
+                          ¥<%= item.price %>
+                        <% end %>
+                    </div>
+                <% end %>
+            <div>
+        </div>
     </div>
+    </div>
+    <div style="text-align: center;"><%= paginate @items %></div>
   </div>
 </div>
