--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -10,21 +10,25 @@
   </thead>
 
   <tbody>
-  <% @customers.each do |f| %>
+  <% @customers.each do |customer| %>
    <tr>
     <td>
-      <%= f.id  %>
+      <%= customer.id  %>
     </td>
     <td>
-      <%= link_to admin_customer_path(f.id) do %>
-       <%= f.first_name %> <%= f.last_name %>
+      <%= link_to admin_customer_path(customer.id) do %>
+       <%= customer.first_name %> <%= customer.last_name %>
       <% end %>
     </td>
     <td>
-      <%= f.email %>
+      <%= customer.email %>
     </td>
     <td>
-      <%= f.is_deleted %>
+      <% if customer.is_deleted %>
+       退会
+       <% else %>
+       有効
+       <% end %>
     </td>
    </tr>
   <% end %>
