[Fix]cart_items/index to app/views/public

--- a/app/views/layouts/_customer_header.html.erb
+++ b/app/views/layouts/_customer_header.html.erb
@@ -5,12 +5,12 @@
   <% end %>
 </li>
 <li class="nav-item">
-  <%= link_to root_path, class: 'nav-link text-light' do %>
+  <%= link_to items_path, class: 'nav-link text-light' do %>
   <i class="fas fa-users" style="color:#fff;"></i> 商品一覧
   <% end %>
 </li>
 <li class="nav-item">
-  <%= link_to  root_path, class: 'nav-link text-light' do %>
+  <%= link_to  cart_items_path, class: 'nav-link text-light' do %>
   <i class="fas fa-book-open" style="color:#fff;"></i> カート
   <% end %>
 </li>
@@ -26,7 +26,7 @@
   <% end %>
 </li>
 <li class="nav-item">
-  <%= link_to root_path, class: 'nav-link text-light' do %>
+  <%= link_to items_path, class: 'nav-link text-light' do %>
   <i style="color:#fff;"></i> 商品一覧
   <% end %>
 </li>
