--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -6,10 +6,10 @@
       <table>
         <thead>
           <th>商品名</th>
-          <th>単価(税込)</th>
-          <th>数量</th>
-          <th>小計</th>
-          <th></th>
+          <th style="width:180px;">単価(税込)</th>
+          <th style="width:180px;">数量</th>
+          <th style="width:180px;">小計</th>
+          <th style="width:180px;"></th>
         </thead>
         <tbody>
         <% @cart_items.each do |cart_item| %>
@@ -26,7 +26,11 @@
               </td>
               <td><%= cart_item.subtotal %></td>
               <% @total_payment +=  cart_item.subtotal %>
-              <td><%= link_to "削除する", cart_item_path(cart_item.id), method: :delete, class: "btn btn-danger" %> </td>
+              <td>
+                <div style="margin-left:50px;">
+                  <%= link_to "削除する", cart_item_path(cart_item.id), method: :delete, class: "btn btn-danger" %>
+                </div>
+              </td>
             </tr>
         <% end %>
         </tbody>
@@ -34,11 +38,13 @@
     </div>
   </div>
 
- <div class="col-xs-8">
-  <span>
-    <%= link_to "買い物を続ける", root_path, class: "btn btn-primary", data: {"turbolinks" => false} %>
-  </span>
- </div>
+  <div class="row">
+   <div class="col-xs-8">
+    <div class="margin-top:50px;">
+      <%= link_to "買い物を続ける", root_path, class: "btn btn-primary", data: {"turbolinks" => false} %>
+    </div>
+   </div>
+  </div>
 
   <div class="col-xs-4">
     <table class="table table-bordered">
@@ -49,10 +55,11 @@
     </table>
   </div>
 
-
-  <div class = "col-xs-4 col-xs-offset-4">
-    <span>
-      <%= link_to "情報入力に進む", customers_orders_about_path, class: "col-xs-12 btn btn-success"%>
-    </span>
+  <div class="row">
+    <div class="col-xs-4"></div>
+      <div class="col-xs-4">
+        <%= link_to "情報入力に進む", orders_new_path, class: "col-xs-12 btn btn-success"%>
+      </div>
+    </div class="col-xs-4">
   </div>
 </div>
