--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,11 @@
  *= require_self
  */
 
+youkoso {
+  padding: 35px 80px 0 0;
+  color: white;
+}
+
  .row {
     display: flex;
     flex-wrap: wrap;
