--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -15,7 +15,7 @@
   <% end %>
 </li>
 <li class="nav-item">
-  <%= link_to destroy_admin_session_path, data: { turbo_method: :delete } do %>
+  <%= link_to destroy_admin_session_path, data: { turbo_method: :delete }, class: 'nav-link text-link' do %>
   <i style="color:#fff;"></i> ログアウト
   <% end %>
 </li class="nav-item">
