--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,7 +19,19 @@ youkoso {
   color: white;
 }
 
- .row {
+html {
+  height:100%;
+}
+
+body{
+  height:100%;
+}
+
+main {
+  height: 100%;
+}
+
+.row {
     display: flex;
     flex-wrap: wrap;
     margin-right: -15px;
