--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,28 +1,28 @@
-<p>注文履歴一覧</p>
-<table class="table table-hover table-inverse">
-  <thead>
-    <tr>
-      <th>購入日時</th>
-      <th>購入者</th>
-      <th>注文個数</th>
-    </tr>
-  </thead>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
 
-  <tbody>
-  <% @order_details.each do |f| %>
-   <tr>
-    <td>
-      <%= link_to order_detail(f.id) do %>
-       <%= f.datetime %>
+    <p>注文履歴一覧</p>
+    <table class="table table-hover table-inverse">
+      <thead>
+        <tr>
+          <th>購入日時</th>
+          <th>購入者</th>
+          <th>注文個数</th>
+        </tr>
+      </thead>
+
+      <tbody>
+      <% @orders.each do |order| %>
+       <tr>
+        <td><%= link_to order.created_at.strftime("%Y/%m/%d %H:%M:%S"), admin_order_path(order) %></td>
+        <td><%= order.customer.last_name + order.customer.first_name %></td>
+        <td><%= order.order_details.sum(:amount) %></td>
+       </tr>
       <% end %>
-    </td>
-    <td>
-      <%= f.last_name + f.first_name %>
-    </td>
-    <td>
-      <%= f.amount %>
-    </td>
-   </tr>
-  <% end %>
-  </tbody>
-</table>
+      </tbody>
+    </table>
+
+    </div>
+  </div>
+</div>
