--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -3,17 +3,24 @@
     <div class="col-xs-12">
       <p>注文履歴詳細</p>
       <table>
-         <tr>
-          <th class="order-show">購入者</th>
-          <td><%= @order.member.last_name %> <%= @order.member.first_name %></td>
+        <tr>
+          <th style="height:50px, width:200px">購入者</th>
+          <td><%= @order.customer.last_name %><%= @order.customer.first_name %></td>
+        </tr>
+        <tr>
+          <th class="order-show">注文日</th>
+          <td><%= @order.created_at.strftime("%Y/%m/%d") %></td>
         </tr>
         <tr>
           <th class="order-show">配送先</th>
-          <td>〒<%= @order.postal_code %> <%= @order.address %><br><%= @order.name %></td>
+          <td>
+              〒<%= @order.postal_code %> <%= @order.address %><br>
+              <%= @order.name %>
+          </td>
         </tr>
         <tr>
-          <th class="order-show">支払い方法</th>
-          <td><%= @order.payment_method %></td>
+          <th class="order-show">支払方法</th>
+          <td><%= @order.payment_method_i18n %></td>
         </tr>
       </table>
     </div>
@@ -30,29 +37,21 @@
             <th></th>
           </tr>
 
-        <% @order_items.each do |order_item| %>
+        <% @order_details.each do |order_detail| %>
          <tr>
-          <td>
-            <%= order_item.name  %>
-          </td>
-          <td>
-             <%= order_item.price %>
-          </td>
-          <td>
-            <%= order_item.amount %>
-          </td>
-          <td>
-            <%= order_item.price*f.amout %>
-          </td>
+          <td><%= order_detail.item.name  %></td>
+          <td><%= order_detail.item.price %></td>
+          <td><%= order_detail.amount %></td>
+          <td><%= order_detail.price*order_detail.amount %></td>
          </tr>
         <% end %>
       </table>
     </div>
 
     <div class="total">
-     <h4>商品合計     <%= @order.total_fee %>円</h4>
-     <h4>送料　　　    <%= @order.postage %>円</h4>
-     <h4>請求金額合計　<%= (@order.total_fee+@order.postage) %>円</h4>
+     <h4>商品合計       <%= @order.total_payment %>円</h4>
+     <h4>送料           <%= @order.shipping_cost %>円</h4>
+     <h4>請求金額合計   <%= (@order.total_payment + @order.shipping_cost) %>円</h4>
     </div>
   </div>
 
