--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,11 @@
 
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-
   </head>
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
           <a class="navbar-brand" href="/">
             <span>NaganoCake</span>
@@ -31,5 +30,16 @@
     </nav>
     </header>
     <%= yield %>
+
+    <footer class="bg-light pt-4 pb-4">
+      <div class="container">
+        <div class="row no-grtters">
+          <div class="col-xs-12 text-center text-muted">
+            Copyright © 2023
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
+
 </html>
