--- a/app/views/public/orders/complete.html.erb
+++ b/app/views/public/orders/complete.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
-  <div class="row" style="text-align: center;">
-    <h5>
-      ご注文ありがとうございました！
-    </h5>
+  <div class="row">
+    <div class="col-xs-12">
+      <h5>
+        ご注文ありがとうございました！
+      </h5>
+    </div>
   </div>
 </div>
