--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,25 +1,29 @@
 <div class="container">
-	<h2>注文履歴一覧</h2>
-	<table class="table-bordered">
-	  <tr>
-      <th>注文日</th>
-      <th>配送先</th>
-      <th>注文商品</th>
-      <th>支払金額</th>
-      <th>注文詳細</th>
-    </tr>
-    <% @orders.each do |order| %>
-    <tr>
-      <td><%= order.created_at.strftime('%Y/%m/%d') %></td>
-      <td><%= order.address %></td>
-      <td>
-        <% order.order_items.each do |order_item| %>
-         <%= order_item.item.name %>
+  <div class="row">
+    <div class="col-xs-12">
+    	<h2>注文履歴一覧</h2>
+    	<table class="table-bordered">
+    	  <tr>
+          <th style="width:120px;">注文日</th>
+          <th style="width:300px;">配送先</th>
+          <th style="width:120px;">注文商品</th>
+          <th>支払金額</th>
+          <th style="width:150px;">注文詳細</th>
+        </tr>
+        <% @orders.each do |order| %>
+        <tr>
+          <td><%= order.created_at.strftime('%Y/%m/%d') %></td>
+          <td><%= order.address %></td>
+          <td>
+            <% order.order_details.each do |order_detail| %>
+             <%= order_detail.item.name %>
+            <% end %>
+          </td>
+          <td><%= order.total_payment %>円</td>
+          <td><%= link_to "表示する", order_path(order.id), class: "btn btn-primary text-cenrer" %></td>
+        </tr>
         <% end %>
-      </td>
-      <td><%= order.total %></td>
-      <td><%= link_to "注文詳細", order_path(order) %></td>
-    </tr>
-    <% end %>
-	</table>
+    	</table>
+    </div>
+	</div>
 </div>
