--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -10,17 +10,36 @@
 				</tr>
 				<tr>
 					<td>配送先</td>
-					<td>〒<%= @order.postal_code %><br><%= @order.address %><br><%= @order.name %></td>
+					<td>〒<%= @order.postal_code %><br>
+					    <%= @order.address %><br>
+					    <%= @order.name %>
+					</td>
 				</tr>
 				<tr>
 					<td>支払方法</td>
-					<td><%= @order.payment_method %></td>
-				</tr>
-				<tr>
-					<td>ステータス</td>
-					<td><%= @order.order_status %></td>
+					<td><%= @order.payment_method_i18n %></td>
 				</tr>
 			</table>
+
+			<div class="col-xs-6">
+				<div class="row">
+				  <p>請求情報</p>
+				  <table class="table table-bordered">
+					<tr>
+						<td>商品合計</td>
+						<th><%= @order.total_payment - @order.shipping_cost %></th>
+					</tr>
+					<tr>
+						<td>配送料</td>
+						<th>800</th>
+					</tr>
+					<tr>
+						<td>ご請求額</td>
+						<th><%= @order.total_payment %></th>
+					</tr>
+				  </table>
+			  </div>
+		  </div>
 
 			<p>注文内容</p>
 				<table class="table table-bordered">
@@ -30,36 +49,16 @@
 						<th>個数</th>
 						<th>小計</th>
 					</tr>
-					<% @order_item.each do |order_item| %>
+					<% @order_details.each do |order_detail| %>
 					<tr>
-						<td><%= order_item.item.item_name %></td>
-						<td><%= order_item.items_with_tax_price %></td>
-						<td><%= order_item.amount %></td>
-						<td><%= order_item.items_with_tax_price*order_item.amount %>
-							<% @total += (order_item.items_with_tax_price*order_item.amount) %>
-						</td>
+						<td><%= order_detail.item.name %></td>
+						<td><%= order_detail.price %></td>
+						<td><%= order_detail.amount %></td>
+						<td><%= order_detail.price*order_detail.amount %></td>
 					</tr>
 					<% end %>
 				</table>
-			</div>
-			<div class="col-xs-6">
-				<div class="row">
-				  <br><p>請求情報</p>
-				  <table class="table table-bordered">
-					<tr>
-						<td>商品合計</td>
-						<th><%= @total %></th>
-					</tr>
-					<tr>
-						<td>配送料</td>
-						<th>800</th>
-					</tr>
-					<tr>
-						<td>ご請求額</td>
-						<th><%= @total + 800 %></th>
-					</tr>
-				  </table>
-		        </div>
+
 		</div>
 	</div>
 </div>
