--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
+  <h5 style="width: 180px; background-color: #DDDDDD; text-align: center;">新規会員登録</h5>
   <div class="row no-gutters">
-    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto shadow-lg rounded px-0 my-5">
-      <h2 class="mb-4 bg-shadow">新規会員登録</h2>
+    <div class="col-sm-12">
+
 
       <%= form_with model: @customer, url: customer_registration_path, id: 'new_costomer', class: 'new_costomer' do |f| %>
         <%= render "public/shared/error_messages", resource: resource %>
@@ -18,7 +19,11 @@
 
         <div class="field">
           <%= f.label :name_kana, "フリガナ" %>
+
+          <%= f.label :last_name_kana, "(セイ)" %>
           <%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana" %>
+
+          <%= f.label :first_name_kana, "(メイ)" %>
           <%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana" %>
         </div>
 
@@ -53,11 +58,11 @@
         </div>
 
         <div class="actions">
-          <%= f.submit "新規登録", class: "btn btn-sm btn-success" %>
+          <%= f.submit "新規登録", class: "btn btn-mx btn-success" %>
         </div>
       <% end %>
 
-      <h2>既に登録済みの方</h2>
+      <h5 style="width: 220px; background-color: #DDDDDD; text-align: center;">既に登録済みの方</h5>
       <%= link_to "こちら", new_customer_session_path %>  からログインしてください。
     </div>
   </div>
