--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,13 +29,14 @@
       </div>
     </nav>
     </header>
+    <div class="container" style="margin-top: 20px;">
     <%= yield %>
+    </div>
 
-    <footer class="bg-light pt-4 pb-4">
+    <footer class="bg-light">
       <div class="container">
-        <div class="row no-grtters">
-          <div class="col-xs-12 text-center text-muted">
-            Copyright © 2023
+        <div class="row">
+          <div class="col-xs-5 col-xs-offset-9">
           </div>
         </div>
       </div>
