--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,7 +1,21 @@
 <div class="container">
   <div class="row">
-    <div>
-      <div class="col-xs-9 col-xs-offset-1">
+     <div class="col-xs-2">
+        <table class="table table-hover table-bordered">
+          <thead>
+            <tr>
+              <th class="text-center">
+                <h5>ジャンル検索</h5>
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+
+          </tbody>
+        </table>
+    </div>
+
+    <div class="col-xs-9 col-xs-offset-1">
         <h4 style="margin: 20px 0;">
           ようこそ、ながのCakeへ！<br>
         　このサイトは、ケーキ販売のECサイトになります。<br>
@@ -9,14 +23,14 @@
         　購入には会員登録が必要になります。<br>
         </h4>
 
-        <h3　"recommended-items" style="font-family: HiraMinPro-W6; color: #000000;">新着商品</h3>
+        <h3 style="color: #000000;">新着商品</h3>
 
         <div class="col-xs-9 col-xs-offset-1">
             <div class="item-card-content">
                 <% @items.last(4).each do |item| %>
                     <div class="col-xs-3" style="padding-right: 0px; padding-left: 0px;">
                         <%= link_to item_path(item.id), style: "color: black;", data: {"turbolinks" => false} do %>
-                            <%= image_tag item.get_image, size: "80x80" %><br>
+                            <%= image_tag item.get_image, size: "240x120" %><br>
                             <%= item.name %><br>
                             ¥<%= item.price.to_s(:delimited, delimiter: ',') %>
                         <% end %>
@@ -24,7 +38,7 @@
                 <% end %>
             <div>
       </div>
-      <h3><%= link_to "全ての商品を見る", items_path %></h3>
+      <h6><%= link_to "全ての商品を見る >", items_path, style: "margin: 30px 0;" %></h6>
     </div>
   </div>
 </div>
