--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,10 +33,10 @@
     <%= yield %>
     </div>
 
-    <footer class="bg-light">
+    <footer class="bg-light" style="height: 50px; width: 100%;">
       <div class="container">
         <div class="row">
-          <div class="col-xs-5 col-xs-offset-9">
+          <div class="col-md-12">
           </div>
         </div>
       </div>
