--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,16 +1,17 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
-      <h2>About</h2>
+    <div class="col-md-12 text-center">
+      <div style="font-size: 100px; margin-bottom: 20px;">About</div>
 
-      <p>
+      <h4>
         ながのCAKEは全国発送可能なケーキ屋さんです。<br>
         お子様からお年寄りの方までお召し上がりいただけるよう、<br>
         様々なバリエーションをご用意しております。<br>
         また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
         ぜひご注文ください。<br>
-      </p>
+      </h4>
 
+      <%= image_tag 'no_image.jpg', size: "800x250" %>
     </div>
   </div>
 </div>
