--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-     <div class="col-xs-2">
+     <div class="col-md-2">
         <table class="table table-hover table-bordered">
           <thead>
             <tr>
@@ -15,8 +15,8 @@
         </table>
     </div>
 
-    <div class="col-xs-9 col-xs-offset-1">
-        <h4 style="margin: 20px 0;">
+    <div class="col-md-7 offset-md-1">
+        <h4 style="margin: 50px 0; height: 150px;">
           ようこそ、ながのCakeへ！<br>
         　このサイトは、ケーキ販売のECサイトになります。<br>
         　会員でない方も商品の閲覧はできますが、<br>
@@ -25,7 +25,7 @@
 
         <h3 style="color: #000000;">新着商品</h3>
 
-        <div class="col-xs-9 col-xs-offset-1">
+        <div class="col-xs-12 col-xs-offset-1">
             <div class="item-card-content">
                 <% @items.last(4).each do |item| %>
                     <div class="col-xs-3" style="padding-right: 0px; padding-left: 0px;">
@@ -38,6 +38,11 @@
                 <% end %>
             <div>
       </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-4 offset-8">
       <h6><%= link_to "全ての商品を見る >", items_path, style: "margin: 30px 0;" %></h6>
     </div>
   </div>
