--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h5 style="width: 180px; background-color: #DDDDDD; text-align: center;">新規会員登録</h5>
-  <div class="row no-gutters">
+  <div class="row">
     <div class="col-sm-12">
 
 
