--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -8,7 +8,7 @@
         <%= render "public/shared/error_messages", resource: resource %>
 
         <div class="field">
-          <%= f.label :name, "(名前)" %>
+          <%= f.label :name, "(氏名)" %>
 
           <%= f.label :last_name, "(姓)" %>
           <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
