--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
+  <h5 style="width: 180px; background-color: #DDDDDD; text-align: center;">注文履歴一覧</h5>
   <div class="row">
     <div class="col-xs-12">
 
-    <p>注文履歴一覧</p>
     <table class="table table-hover table-inverse">
       <thead>
         <tr>
