--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,29 +1,31 @@
-<p>商品一覧</p>
-<%= link_to "+", new_admin_item_path, class: "btn btn-sm" %>
-<table class="table table-hover table-inverse">
-  <thead>
-    <tr>
-      <th>商品ID</th>
-      <th>商品名</th>
-      <th>税抜価格</th>
-    </tr>
-  </thead>
+<div class="container">
+  <h5 style="width: 180px; background-color: #DDDDDD; text-align: center;">商品一覧</h5>
+  <%= link_to "+", new_admin_item_path, class: "btn btn-sm" %>
+  <table class="table table-hover table-inverse">
+    <thead>
+      <tr>
+        <th>商品ID</th>
+        <th>商品名</th>
+        <th>税抜価格</th>
+      </tr>
+    </thead>
 
-  <tbody>
-  <% @items.each do |f| %>
-   <tr>
-    <td>
-      <%= f.id  %>
-    </td>
-    <td>
-      <%= link_to admin_item_path(f.id) do %>
-       <%= f.name %>
-       <% end %>
-    </td>
-    <td>
-      <%= f.price %>
-    </td>
-   </tr>
-  <% end %>
-  </tbody>
-</table>
+    <tbody>
+    <% @items.each do |f| %>
+     <tr>
+      <td>
+        <%= f.id  %>
+      </td>
+      <td>
+        <%= link_to admin_item_path(f.id) do %>
+         <%= f.name %>
+         <% end %>
+      </td>
+      <td>
+        <%= f.price %>
+      </td>
+     </tr>
+    <% end %>
+    </tbody>
+  </table>
+</div>
