--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
- <div class="row no-gutters">
-  <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto shadow-lg rounded px-0 my-5">
-   <h5 class="text-dark bg-light p-4 mb-0">商品新規登録</h5>
+ <h5 style="width: 180px; background-color: #DDDDDD; text-align: center;">商品新規登録</h5>
+ <div class="row">
+  <div class="col-md-8">
    <div class="form-body p-4">
     <%= form_with model: @item, url:admin_items_path, local:true do |f| %>
      <%= f.label :image, "商品画像" %>
