--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -4,22 +4,22 @@
       <p>注文履歴詳細</p>
       <table>
         <tr>
-          <th style="height:50px, width:200px">購入者</th>
+          <th>購入者</th>
           <td><%= @order.customer.last_name %><%= @order.customer.first_name %></td>
         </tr>
         <tr>
-          <th class="order-show">注文日</th>
+          <th>注文日</th>
           <td><%= @order.created_at.strftime("%Y/%m/%d") %></td>
         </tr>
         <tr>
-          <th class="order-show">配送先</th>
+          <th>配送先</th>
           <td>
               〒<%= @order.postal_code %> <%= @order.address %><br>
               <%= @order.name %>
           </td>
         </tr>
         <tr>
-          <th class="order-show">支払方法</th>
+          <th>支払方法</th>
           <td><%= @order.payment_method_i18n %></td>
         </tr>
       </table>
@@ -48,10 +48,12 @@
       </table>
     </div>
 
-    <div class="total">
-     <h4>商品合計       <%= @order.total_payment %>円</h4>
-     <h4>送料           <%= @order.shipping_cost %>円</h4>
-     <h4>請求金額合計   <%= (@order.total_payment + @order.shipping_cost) %>円</h4>
+    <div class="col-xs-2 offset-1">
+      <div class="total">
+       <p><strong>商品合計</strong>       <%= @order.total_payment %>円</p>
+       <p><strong>送料</strong>           <%= @order.shipping_cost %>円</p>
+       <p><strong>請求金額合計</strong>   <%= (@order.total_payment + @order.shipping_cost) %>円</p>
+      </div>
     </div>
   </div>
 
