--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -23,7 +23,7 @@
 
   		<div class="col-xs-12">
   		  <%= form_with model: @cart_item, url: cart_items_path(@cart_item) do |item| %>
-  		  <%= item.select :amount, {'1': 1, '2': 2, '3': 3, '4': 4, '5': 5, '6': 6, '7': 7, '8': 8, '9': 9, '10': 10}, placeholder: "個数選択" %>
+  		  <%= item.select :amount, {'1': 1, '2': 2, '3': 3, '4': 4, '5': 5, '6': 6, '7': 7, '8': 8, '9': 9, '10': 10}, {:prompt => "個数選択"} %>
   		  <%= item.hidden_field :item_id, :value => @item.id %>
   		  <%= item.submit "カートに入れる", class: "btn btn-success" %>
   		<% end %>
