--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,14 +1,13 @@
 <div class="container">
+  <h5 style="width: 220px; background-color: #DDDDDD; text-align: center;">注文情報入力</h5>
   <div class="row">
-    <div class="col-xs-7">
-	    <h2>注文情報入力</h2>
-
+    <div class="col-md-12">
 
       <%= form_with(model: @order, local: true, url: orders_confirm_path, method: :post) do |f| %>
       <div style="margin-left:20px; ">
-        <h4>
+        <h5>
           <strong>支払い方法</strong>
-        </h4>
+        </h5>
         <label style="margin-left: 60px;">
           <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
           <%= f.label :payment_method_credit_card, Order.payment_methods_i18n[:credit_card] %>
@@ -18,19 +17,21 @@
           <%= f.label :payment_method_bank, Order.payment_methods_i18n[:bank]%>
         </label><br>
 
-        <h4>
+        <h5>
           <strong>お届け先</strong>
-        </h4>
+        </h5>
 
         <div style="margin-left:70px;">
-          <%= current_customer.postal_code %> <%= current_customer.address %><br>
+          〒<%= current_customer.postal_code %> <%= current_customer.address %><br>
           <%= current_customer.last_name %><%= current_customer.first_name %>
         </div><br>
+      </div>
 
+  <div class="row">
+    <div class="col-md-4 offset-5">
         <%= f.submit "確認画面に進む", class: "btn btn-primary text-cenrer" %>
 
       <% end %>
-      </div>
     </div>
   </div>
 </div>
