--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,13 +1,13 @@
 <div class="container">
- <div class="row no-gutters">
-  <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto shadow-lg rounded px-0 my-5">
-   <h5 class="text-dark bg-light p-4 mb-0">商品編集</h5>
-   <div class="form-body p-4">
+ <div class="row">
+  <div class="col-xs-10 offset-1">
+   <h5 style="width: 180px; background-color: #DDDDDD; text-align: center;">商品編集</h5>
+   <table class="table table-borderless">
     <%= form_with model: @item, url:admin_path(@item.id), local:true do |f| %>
      <%= f.label :image, "商品画像" %>
      <%= f.file_field :image, accept: "image/*", class: "w-100" %>
-      <div class="input-group mb-3 mt-4">
-       <div class="input-group-prepend">
+      <div>
+       <div>
         <span class="input-grout-text" aria-hidden="true"><i class="fas fa-building"></i></span>
        </div>
        <%= f.label :name, "商品名" %><%= f.text_field :name, class:"form-control" %>
@@ -19,7 +19,7 @@
      <hr>
      <%= f.submit '変更を保存', class:"btn btn-sm btn-success mt-9" %>
     <% end %>
-   </div>
+   </table>
   </div>
  </div>
 </div>
