--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-      <div class="col-10">
+      <div class="col-md-12">
       <h3><%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細</h3>
           <table>
             <body>
@@ -34,7 +34,7 @@
               </tr>
               <tr>
                 <th>会員ステータス</th>
-                <td><%= @customer.is_deleted_i18n %></td>
+                <td><%= @customer.is_deleted ? "退会" : "有効" %></td>
               </tr>
             </body>
           </table>
