--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,14 +1,36 @@
-<div>
-  <h5>商品詳細</h5>
-  <% if @item.image.attached? %>
-    <%= image_tag item.image, size: "200x200" %>
-  <% else %>
-    <%= image_tag 'no_image', size: "200x200" %>
-  <% end %>
-  <p>商品名  <%= @item.name %></p>
-  <p>商品説明  <%= @item.introduction %></p>
-  <p>税込価格</br>
-    (税抜価格)  <%= @item.price*1.1 %>円 (<%= @item.price %>円)
-  </p>
-  <%= link_to "編集する", edit_admin_item_path(@item), class: "btn btn-success" %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-4">
+      <h5 style="width: 180px; background-color: #DDDDDD; text-align: center;">商品詳細</h5><br>
+      <% if @item.image.attached? %>
+        <%= image_tag @item.image, size: "300x200" %>
+      <% else %>
+        <%= image_tag 'no_image', size: "300x200" %>
+      <% end %>
+    </div>
+
+
+    <div class="col-xs-7 offset-1">
+      <table class="table table-borderless">
+        <tbody>
+          <br><br><br><br>
+          <tr>
+            <th>商品名</th>
+            <td><%= @item.name %></td>
+          </tr>
+          <tr>
+            <th>商品説明</th>
+            <td><%= @item.introduction %></td>
+          </tr>
+          <tr>
+            <th>税込価格<br>(税抜価格)</th>
+            <td style="text-under"><%= @item.with_tax_price %> (<%= @item.price %>)円</td>
+          </tr>
+        </tbody>
+      </table>
+      <br><br><br>
+      <%= link_to "編集する", edit_admin_item_path(@item), class: "btn btn-lg btn-success" %>
+      
+    </div>
+  </div>
 </div>
