--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,6 +1,6 @@
 <div class="contaner">
   <div class="row">
-    <div class="col-xs-12"></div>
+    <div class="col-md-3 offset-2">
       <div>
         <% if @item.image.attached? %>
           <%= image_tag @item.image, size: "200x200" %>
@@ -8,25 +8,20 @@
           <%= image_tag 'no_image', size: "200x200" %>
         <% end %>
       </div>
-      <div>
+    </div>
+
+
+    <div class="col-md-7">
+  		<div>
         <p><%= @item.name %></p><br>
         <p><%= @item.introduction %></p><br>
-        <p>¥<%= @item.with_tax_price %>（税込）</p>
+        <p>¥<%= @item.with_tax_price.to_s(:delimited, delimiter: ',') %>（税込）</p>
       </div>
-  </div>
-
-  <div class="row">
-  	<div class="col-xs-12">
-  	</div>
-  	<div class="col-xs-12">
-  	</div>
-
-  		<div class="col-xs-12">
   		  <%= form_with model: @cart_item, url: cart_items_path(@cart_item) do |item| %>
   		  <%= item.select :amount, {'1': 1, '2': 2, '3': 3, '4': 4, '5': 5, '6': 6, '7': 7, '8': 8, '9': 9, '10': 10}, {:prompt => "個数選択"} %>
   		  <%= item.hidden_field :item_id, :value => @item.id %>
   		  <%= item.submit "カートに入れる", class: "btn btn-success" %>
   		<% end %>
-  		</div>
+  	</div>
   </div>
 </div>
