--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,48 +1,44 @@
 <div class="container">
   <div class="row">
-     <div class="col-md-2">
-        <table class="table table-hover table-bordered">
-          <thead>
-            <tr>
-              <th class="text-center">
-                <h5>ジャンル検索</h5>
-              </th>
-            </tr>
-          </thead>
-          <tbody>
-
-          </tbody>
-        </table>
-    </div>
+    <div class="col-md-2">
+      <table class="table table-hover table-bordered">
+        <thead>
+          <tr>
+            <th class="text-center">
+              <h5>ジャンル検索</h5>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
+     </div>
 
     <div class="col-md-9 offset-md-1">
-        <h4 style="margin: 50px 0; height: 200px;">
-          ようこそ、ながのCakeへ！<br>
-        　このサイトは、ケーキ販売のECサイトになります。<br>
-        　会員でない方も商品の閲覧はできますが、<br>
-        　購入には会員登録が必要になります。<br>
-        </h4>
+      <h4 style="margin: 50px 0; height: 200px;">
+        ようこそ、ながのCakeへ！<br>
+        このサイトは、ケーキ販売のECサイトになります。<br>
+        会員でない方も商品の閲覧はできますが、<br>
+        購入には会員登録が必要になります。<br>
+      </h4>
 
-        <h3 style="color: #000000;">新着商品</h3>
-
-        <div class="col-xs-12 col-xs-offset-1">
-            <div class="item-card-content">
-                <% @items.last(4).each do |item| %>
-                    <div class="col-xs-3" style="padding-right: 0px; padding-left: 0px;">
-                        <%= link_to item_path(item.id), style: "color: black;", data: {"turbolinks" => false} do %>
-                            <%= image_tag item.get_image, size: "240x120" %><br>
-                            <%= item.name %><br>
-                            ¥<%= item.price.to_s(:delimited, delimiter: ',') %>
-                        <% end %>
-                    </div>
-                <% end %>
-            <div>
-      </div>
+      <h3 style="color: #000000;">新着商品</h3>
+        <div class="item-card-content">
+          <% @items.last(4).each do |item| %>
+            <div class="col-xs-3">
+              <%= link_to item_path(item.id), style: "color: black;", data: {"turbolinks" => false} do %>
+                <%= image_tag item.get_image, size: "240x120" %><br>
+                <%= item.name %><br>
+                ¥<%= item.price.to_s(:delimited, delimiter: ',') %>
+              <% end %>
+            </div>
+          <% end %>
+        </div>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-md-4 offset-8">
+    <div class="col-md-3 offset-9">
       <h6><%= link_to "全ての商品を見る >", items_path, style: "margin: 30px 0;" %></h6>
     </div>
   </div>
