--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,23 +1,16 @@
 <div class="container">
+　<h5 style="width: 150px; background-color: #DDDDDD; text-align: center;">商品一覧(全<%= @items.count %>件)</h5>
   <div class="row">
-    <div>
-      <h3>商品一覧</h3>
-        <div class="col-xs-9 col-xs-offset-1">
-
-        <div class="col-xs-9 col-xs-offset-1">
-            <div class="item--card-content">
-                <% @items.each do |item| %>
-                    <div class="col-xs-3" style="padding-right: 0px; padding-left: 0px;">
-                        <%= link_to item_path(item.id) ,style: "color: black;", data: {"turbolinks" => false} do %>
-                          <%= image_tag item.get_image, size: "160x160" %><br>
-                          <%= item.name %><br>
-                          ¥<%= item.price %>
-                        <% end %>
-                    </div>
-                <% end %>
-            <div>
+    <div class="col-md-12">
+      <% @items.last(8).each do |item| %>
+        <div class="col-md-4" style="margin: 20px;">
+          <%= link_to item_path(item.id) do %>
+            <%= image_tag item.get_image, size: "160x160" %><br>
+            <%= item.name %><br>
+            ¥<%= item.price.to_s(:delimited, delimiter: ',') %>
+          <% end %>
         </div>
-    </div>
+      <% end %>
     </div>
   </div>
 </div>
